mock-data-displayed
Dsiplayed the mock data on the Search Page

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_SEARCH_KEY = AIzaSyAesT7DiK_rvFFX9ecLfOywTOk9EmJHA00
-REACT_APP_SEARCH_ENGINE_KEY= 248c8430792d24411
+VITE_SEARCH_KEY = AIzaSyAesT7DiK_rvFFX9ecLfOywTOk9EmJHA00
+VITE_SEARCH_ENGINE_KEY= 248c8430792d24411
 
 
